refactor!: fix compile errors and test failures
Remove explicit repositoryId usage from all domain specific API
requests.
Rename SnomedTerminologyComponentConstants.TERMINOLOGY_ID to TOOLING_ID.